--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,3 +78,17 @@ body {
   left:40px;
 
 }
+
+#inspire-button {
+    padding-top: 5px;
+    background-color: red;
+    border: 2px solid;
+    width: 100px;
+    height: 50px;
+    font-size: 15px;
+    margin: 0 20px;
+    position: absolute;
+    top: 100px;
+    left:500px;
+    
+}
