--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ body {
 
 }
 
-#inspire-button {
+.inspire-button {
     padding-top: 5px;
     background-color: red;
     border: 2px solid;
@@ -89,6 +89,10 @@ body {
     margin: 0 20px;
     position: absolute;
     top: 100px;
-    left:500px;
-    
+    left:500px;   
+}
+
+.inspire-button:hover {
+  background-color: bisque;
+  color:red;
 }
