--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,9 @@ body {
       width: 300px;
       height: 300px;
       border-radius: 0 300px 0 0;
-      background-color: red;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
       position: absolute;
       top: 0;
       left:300px;
@@ -31,6 +33,9 @@ body {
       border-radius: 0 0 300px 0px;
       background-image: url('../images/logo.png');
       position: absolute;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
       top: 300px;
       left: 300px;
     }
@@ -88,8 +93,8 @@ body {
     font-size: 15px;
     margin: 0 20px;
     position: absolute;
-    top: 100px;
-    left:500px;   
+    top: 150px;
+    left:750px;   
 }
 
 .inspire-button:hover {
