--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,16 +9,19 @@ body {
   width: 300px;
   height: 600px; 
   border-radius: 300px 0 0 300px;
-  background-image: url('../images/logo.png');
+  background-image: url('../images/vegetables.jpg');
+  
   position: absolute;
   top: 0;
   left:0;
+
   }
 
   #protein-portion {
       width: 300px;
       height: 300px;
       border-radius: 0 300px 0 0;
+      background-image: url('../images/protein.jpg');
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
@@ -31,7 +34,7 @@ body {
       width: 300px;
       height: 300px;
       border-radius: 0 0 300px 0px;
-      background-image: url('../images/logo.png');
+      background-image: url('../images/carbs.jpg');
       position: absolute;
       background-repeat: no-repeat;
       background-position: center;
