Added javascript to generate dish names with images. Added objects to arrays.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,3 +104,25 @@ body {
   background-color: bisque;
   color:red;
 }
+
+#protein-result {
+  font-size: 30px;
+  margin: 0 20px;
+  position: absolute;
+  top: 230px;
+  left:750px;  
+}
+#carb-result {
+  font-size: 30px;
+  margin: 0 20px;
+  position: absolute;
+  top: 260px;
+  left:750px;  
+}
+#veg-result {
+  font-size: 30px;
+  margin: 0 20px;
+  position: absolute;
+  top: 290px;
+  left:750px;  
+}
