Adjust quiz structure

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,11 @@ body {
   margin-top: 30px;
 }
 
+#quiz-area {
+  padding-left:30px;
+  padding-top: 70px;
+}
+
 @media screen and (max-width: 800px) {
   #plate-area {
     top:400px;
