--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ body {
 
 }
 
+
 #veg-portion {
   width: 300px;
   height: 600px; 
@@ -59,6 +60,7 @@ body {
       position: absolute;
       top: 23px;
       right:0;
+      
   }
   
   #menu li {
@@ -117,11 +119,12 @@ body {
   padding-top: 110px;
   padding-left:30px;
   margin-top: 30px;
+  font-size: 20px;
 }
 
 #quiz-area {
   padding-left:30px;
-  padding-top: 70px;
+  padding-top: 130px;
 }
 
 @media screen and (max-width: 800px) {
@@ -131,4 +134,60 @@ body {
     background-color: red;
     position: relative;
   }
+}
+
+#result-and-message-container {
+  position:relative;
+}
+
+#quiz-area {
+font-size:20px;
+}
+
+/*
+#result-and-message {
+  font-size: 20px;
+  color: #3a3a3a;
+  background-color: #EBCFB2;
+  position: absolute;
+  right:600px;
+  bottom:60px;
+  text-align:center;
+  border: 1px solid;
+  width:400px;
+  height:100px;
+  
+}
+*/
+
+@media screen and (max-width: 800px) {
+  #menu {
+      
+      float: left;
+      margin-bottom: 20px;
+      line-height: 120px;
+      font-size: 20px;
+      padding: 20px;
+      margin: 0;
+      font-weight: bold;
+  }
+
+#heading {
+font-size: 30px;
+}
+
+#menu li {
+    list-style-type: none;
+    margin-right: 90px;
+}
+
+.form-section {
+  font-size:15px;
+}
+
+#quiz-area {
+  padding-left:30px;
+  padding-top: 150px;
+}
+
 }
