--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,29 @@ body {
 font-size:20px;
 }
 
+footer {
+  height: 50px;
+  background-color: aqua;
+
+}
+
+.social-networks {
+  text-align:center;
+  margin-right: 1200px;
+  margin-top: 100px;
+}
+
+.social-networks > li {
+  display: inline;
+}
+
+.social-networks i {
+  font-size: 160%;
+  margin: 1%;
+  padding: 5%;
+  color: #424B54;
+}
+
 /*
 #result-and-message {
   font-size: 20px;
