--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ body {
       float: left;
       margin-bottom: 20px;
       line-height: 120px;
-      font-size: 20px;
+      font-size: 30px;
       padding: 20px;
       margin: 0;
       font-weight: bold;
@@ -161,7 +161,8 @@ font-size: 30px;
 
 #menu li {
     list-style-type: none;
-    margin-right: 90px;
+    margin-right: 40px;
+    padding:0;
 }
 
 .form-section {
