--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,13 +145,13 @@ body {
 
 @media screen and (max-width: 800px) {
   #menu {
-      
-      float: left;
+      /*float: left;*/
       margin-bottom: 20px;
-      line-height: 120px;
+      /*line-height: 120px;*/
       font-size: 30px;
       padding: 20px;
-      margin: 0;
+      /*margin: 0;*/
+      margin-top:50px;
       font-weight: bold;
   }
 
@@ -163,6 +163,7 @@ font-size: 30px;
     list-style-type: none;
     margin-right: 40px;
     padding:0;
+    font-size:30px;
 }
 
 .form-section {
