--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,11 +127,41 @@ body {
   padding-top: 130px;
 }
 
-.social-networks {
-  display:inline;
+/* Footer */
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
 }
 
-/*
+#content-wrap {
+  padding-bottom: 2.5rem;   
+}
+
+#footer {
+  position: absolute;
+  display: inline;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            
+}
+
+.social-networks {
+  text-align: center;
+}
+
+.social-networks > li {
+  display: inline;
+}
+
+.social-networks i {
+  font-size: 160%;
+  margin: 1%;
+  padding: 5%;
+  color: #424B54;
+}
+
+/* Result and message on Quiz page
 #result-and-message {
   font-size: 20px;
   color: #3a3a3a;
