--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,5 +255,38 @@ font-size: 30px;
       background-color: red;
     }
 
+/* mobile media query footer */
 
+    #page-container {
+      position: relative;
+      min-height: 140vh;
+    }
+    
+    #content-wrap {
+      padding-bottom: 2.5rem;   
+    }
+    
+    #footer {
+      position: absolute;
+      display: inline;
+      bottom: 0;
+      width: 100%;
+      height: 2.5rem;            
+    }
+
+    .social-networks {
+      text-align: center;
+    }
+    
+    .social-networks > li {
+      display: inline;
+    }
+    
+    .social-networks i {
+      font-size: 160%;
+      margin: 1%;
+      padding: 8%;
+      padding-right: 70px;
+      color: #424B54;
+    }
 }
