--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,10 @@ body {
   padding-left: 30px;
 }
 
+#input-section {
+  margin-bottom:25px;
+}
+
 .form-section {
   padding-top: 110px;
   padding-left:30px;
